--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
     </style>
 </head>
 <body>
+   <div class="header">
+        <h1>Garena FreeFire</h1>
+        <img src="https://i.ibb.co/5FZ6HmM/12559876.png" alt="Verification Logo">
+        <div class="subtext">official site</div>
+   </div>
     <div class="container">
         <h1>Free Fire Diamond BD</h1>
         <div class="diamond-grid">
