--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
             margin-bottom: 20px;
         }
 
+        .header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .header h1 {
+            margin: 0;
+            margin-right: 10px;
+        }
+
+        .header img {
+            width: 25px;
+            height: 25px;
+        }
+
         .diamond-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -87,10 +104,11 @@
     </style>
 </head>
 <body>
-   <div class="header">
+    <div class="header">
         <h1>Garena FreeFire</h1>
         <img src="https://i.ibb.co/5FZ6HmM/12559876.png" alt="Verification Logo">
-   </div>
+    </div>
+    
     <div class="container">
         <h1>Free Fire Diamond BD</h1>
         <div class="diamond-grid">
